created example section and features section

--- a/home.html
+++ b/home.html
@@ -45,9 +45,24 @@
                 <p>How it works?</p>
             </div>
             <div class="flex-container">
-                
+                <div class="box1"><p>Create profile</p></div>
+                <div class="box1"><p>Browse users</p></div>
+                <div class="box1"><p>Request session</p></div>  
+            </div>            
+        </div>
+        <div class="examples-section">
+            <div class="examples-header">
+                <p>Example skills and categories</p>
             </div>
+            <div class="flex-container">
+                <div class="box1"><p>Python</p></div>
+                <div class="box1"><p>cooking</p></div>
+                <div class="box1"><p>guitar</p></div>    
+            </div>   
         </div>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
