--- a/home.html
+++ b/home.html
@@ -62,7 +62,11 @@
         </div>
     </main>
     <footer>
-        
+        <div class="foot-container">
+            <div class="box2"><p>links</p></div>
+            <div class="box2"><p>about</p></div>
+            <div class="box2"><p>contact</p></div>           
+        </div>
     </footer>
 </body>
 </html>
