--- a/login.html
+++ b/login.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        
-    </header>   
+        <div class="container">
+            <div class="header-left">
+                <h1>SkillSwap</h1>
+            </div>
+            <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Browse</a></li>
+                <li><a href="#">My Profile</a></li>
+                <li><a href="#">Dashboard</a></li>
+                <li><a href="#">Log Out</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+    <main>
+       <div class="log-in-container">
+            <div class="text"><input type="text" /></div>
+            <div class="text"><input type="password" /></div>
+       </div>
+    </main>   
 </body>
 </html>
