--- a/Home/home.html
+++ b/Home/home.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Browse</a></li>
                 <li><a href="#">My Profile</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Log Out</a></li>
+                <li><a href="#">Log in / Sign up</a></li>
             </ul>
         </nav>
         </div>      
