--- a/Login/login.html
+++ b/Login/login.html
@@ -8,11 +8,11 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- <header>
+    <header>
             <h1>SkillSwap</h1>
-    </header> -->
+    </header>
     <main>
-        <!-- <section> -->
+        <section>
         <div class="card">
             <form action="">
                 <h1>Login</h1>
@@ -40,7 +40,7 @@
                 </div>
             </form>
         </div> 
-<!--         </section>  --> 
+        </section>
     </main>   
 </body>
 </html>
