--- a/Login/login.html
+++ b/Login/login.html
@@ -36,7 +36,7 @@
 
                 <div class="register-link">
                     <p>Don't have an account?
-                    <a href="#">Register</a></p>
+                    <a href="#">Sign up</a></p>
                 </div>
             </form>
         </div> 
