--- a/Home/home.html
+++ b/Home/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- nav-bar -->
     <header>
         <div class="container">
             <div class="header-left">
@@ -24,6 +25,7 @@
         </div>      
     </header>
     <main>
+        <!-- hero section -->
         <div class="hero_section right">
             <img width="700"  src="brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="hehe">
         </div>
@@ -62,6 +64,7 @@
         </div>
     </main>
     <footer>
+        <!-- footer -->
         <div class="foot-container">
             <div class="box2"><p>links</p></div>
             <div class="box2"><p>about</p></div>
