--- a/signup/signup.html
+++ b/signup/signup.html
@@ -10,15 +10,23 @@
 </head>
 <body >
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="#">SkillSwap</a>
-            <div class="d-flex">
-                <a class="new-link" style="padding-right:3rem;" href="#">Home</a>
-                <a class="new-link" style="padding-right:3rem;" href="#">Browse</a>
-                <a class="new-link" style="padding-right:3rem;" href="#">Login</a>
+     <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+            <div class="container">
+                <a class="navbar-brand fw-bold" href="#">SkillSwap</a>
+                <div class="d-flex">                  
+                        <a class="new-link" style="padding-right:3rem;" href="#">Home</a>
+                        <a class="new-link" style="padding-right:3rem;" href="#">Browse</a>
+                        <a class="new-link" style="padding-right:3rem;" href="#">Login</a>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+     </header>
+
+     <main>
+        <!-- Signup form -->
+     </main>
+
+
 </body>
 </html>
