created signup form with bootstrap css

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -25,6 +25,40 @@
 
      <main>
         <!-- Signup form -->
+         <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class
+                            <form>
+                                <div class="mb-3">
+                                    <label class="form-label">Full Name</label>
+                                    <input type="text" class="form-control" placeholder="Jack Harlow" required />
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label">Email address</label>
+                                    <input type="text" class="form-control" placeholder="you@example.com" required />
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label">Password</label>
+                                    <input type="password" class="form-control" />
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label">Confirm password</label>
+                                    <input type="password" class="form-control" required />
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label">What do you want to learn?</label>
+                                    <input type="text" class="form-control" placeholder="e.g. Javascript, python, guitar"/>
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label">What can you teach?</label>
+                                    <input type="text" class="form-control" placeholder="e.g. Photgraphy, cooking" />
+                                </div>
+                                <button type="submit" class="btn btn-success w-100">Sign up</button>
+                            </form>
+                </div>
+            </div>
+        </div>
      </main>
 
 
