modified the signup form using card classes and added a link to the login page in case the user already has an account

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -28,7 +28,9 @@
          <div class="container mt-5">
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <div class
+                    <div class="card shadow-sm card-body">
+                        <h3 class="card-title text-center mb-4">Create Your SkillSwap Account</h3>
+
                             <form>
                                 <div class="mb-3">
                                     <label class="form-label">Full Name</label>
@@ -55,7 +57,12 @@
                                     <input type="text" class="form-control" placeholder="e.g. Photgraphy, cooking" />
                                 </div>
                                 <button type="submit" class="btn btn-success w-100">Sign up</button>
+
+                                <p class="mt-3 text-center">
+                                    Already have an account? <a href="login.html">Log In</a>
+                                </p>
                             </form>
+                    </div>
                 </div>
             </div>
         </div>
