--- a/signup/signup.html
+++ b/signup/signup.html
@@ -59,7 +59,7 @@
                                 <button type="submit" class="btn btn-success w-100">Sign up</button>
 
                                 <p class="mt-3 text-center">
-                                    Already have an account? <a href="login.html">Log In</a>
+                                    Already have an account? <a href="../Login/login.html">Log In</a>
                                 </p>
                             </form>
                     </div>
