--- a/signup/signup.html
+++ b/signup/signup.html
@@ -15,9 +15,9 @@
             <div class="container">
                 <a class="navbar-brand fw-bold" href="#">SkillSwap</a>
                 <div class="d-flex">                  
-                        <a class="new-link" style="padding-right:3rem;" href="#">Home</a>
-                        <a class="new-link" style="padding-right:3rem;" href="#">Browse</a>
-                        <a class="new-link" style="padding-right:3rem;" href="#">Login</a>
+                        <a class="new-link" style="padding-right:3rem;" href="../Home/home.html">Home</a>
+                        <a class="new-link" style="padding-right:3rem;" href="../Browse/browse.html">Browse</a>
+                        <a class="new-link" style="padding-right:3rem;" href="../Login/login.html">Login</a>
                 </div>
             </div>
         </nav>
