changed background color of the page

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -23,9 +23,9 @@
         </nav>
      </header>
 
-     <main>
+     <main style="padding-top: 60px">
         <!-- Signup form -->
-         <div class="container mt-5">
+         <div class="container ">
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <div class="card shadow-sm card-body">
