--- a/signup/signup.html
+++ b/signup/signup.html
@@ -10,7 +10,7 @@
 </head>
 <body >
     <!-- nav bar -->
-     <header>
+     <header style="background-color: rgb(240, 245, 244);">
         <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
             <div class="container">
                 <a class="navbar-brand fw-bold" href="#">SkillSwap</a>
@@ -18,6 +18,7 @@
                         <a class="new-link" style="padding-right:3rem;" href="../Home/home.html">Home</a>
                         <a class="new-link" style="padding-right:3rem;" href="../Browse/browse.html">Browse</a>
                         <a class="new-link" style="padding-right:3rem;" href="../Login/login.html">Login</a>
+                        <a class="new-link" style="padding-right:3rem;" href="#">Sign up</a>
                 </div>
             </div>
         </nav>
