--- a/Login/login.html
+++ b/Login/login.html
@@ -6,12 +6,24 @@
     <title>Login page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <!-- header -->
-    <header>
-            <h1>SkillSwap</h1>
-    </header>
+    <header style="background-color: rgb(240, 245, 244);">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+            <div class="container">
+                <a class="navbar-brand fw-bold" href="#">SkillSwap</a>
+                <div class="d-flex">                  
+                        <a class="new-link" style="padding-right:3rem;" href="../Home/home.html">Home</a>
+                        <a class="new-link" style="padding-right:3rem;" href="../Browse/browse.html">Browse</a>
+                        <a class="new-link" style="padding-right:3rem;" href="../Login/login.html">Login</a>
+                        <a class="new-link" style="padding-right:3rem;" href="#">Sign up</a>
+                </div>
+            </div>
+        </nav>
+     </header>
     <main>
         <section>
         <div class="card">
