corrected the links on the login nav bar

--- a/Login/login.html
+++ b/Login/login.html
@@ -18,8 +18,8 @@
                 <div class="d-flex">                  
                         <a class="new-link" style="padding-right:3rem;" href="../Home/home.html">Home</a>
                         <a class="new-link" style="padding-right:3rem;" href="../Browse/browse.html">Browse</a>
-                        <a class="new-link" style="padding-right:3rem;" href="../Login/login.html">Login</a>
-                        <a class="new-link" style="padding-right:3rem;" href="#">Sign up</a>
+                        <a class="new-link" style="padding-right:3rem;" href="#">Login</a>
+                        <a class="new-link" style="padding-right:3rem;" href="../signup/signup.html">Sign up</a>
                 </div>
             </div>
         </nav>
