added the link to the signup page on the login file under dont have an acc

--- a/Login/login.html
+++ b/Login/login.html
@@ -49,7 +49,7 @@
 
                 <div class="register-link">
                     <p>Don't have an account?
-                    <a href="#">Sign up</a></p>
+                    <a href="../signup/signup.html">Sign up</a></p>
                 </div>
             </form>
         </div> 
