started filling out the dashboard with welcome message and stats summary

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -22,5 +22,33 @@
             </div>
         </nav>
      </header>
+     <main>
+        <h1>Welcome (User's First Name)</h1>
+        <hr>
+        <div></div>
+        <h2>Stats Summary</h2>
+        <div class="card-container">
+            <div class="card">
+                <img src="#">
+                <div class="card-content">
+                    <p>Sessions Requested: [number]</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="#">
+                <div class="card-content">
+                    <p>Sessions Offered: [number]</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="#">
+                <div class="card-content">
+                    <p>Pending Requests: [number]</p>
+                </div>
+            </div>
+        </div>
+
+
+     </main>
 </body>
 </html>
