--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -25,24 +25,28 @@
      <main>
         <h1>Welcome (User's First Name)</h1>
         <hr>
-        <div></div>
-        <h2>Stats Summary</h2>
+        <div class="stats">
+            <h2>Stats Summary</h2>
+        </div>
         <div class="card-container">
             <div class="card">
-                <img src="#">
+                <img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg">
                 <div class="card-content">
+                    <h3>Card 1</h3>
                     <p>Sessions Requested: [number]</p>
                 </div>
             </div>
             <div class="card">
-                <img src="#">
+                <img src="https://cdn.pixabay.com/photo/2024/05/26/10/15/bird-8788491_1280.jpg">
                 <div class="card-content">
+                    <h3>Card 2</h3>
                     <p>Sessions Offered: [number]</p>
                 </div>
             </div>
             <div class="card">
-                <img src="#">
+                <img src="https://www.planetware.com/wpimages/2020/01/india-in-pictures-beautiful-places-to-photograph-taj-mahal.jpg">
                 <div class="card-content">
+                    <h3>Card 3</h3>
                     <p>Pending Requests: [number]</p>
                 </div>
             </div>
