--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -23,11 +23,13 @@
         </nav>
      </header>
      <main>
+        <!-- Welcome message -->
         <h1>Welcome (User's First Name)</h1>
         <hr>
         <div class="stats">
             <h2>Stats Summary</h2>
         </div>
+        <!-- stat summary -->
         <div class="card-container">
             <div class="card">
                 <img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg">
@@ -51,8 +53,32 @@
                 </div>
             </div>
         </div>
+        <!-- Upcomming session -->
+         <div class="session">
+            <h2>Upcoming Sessions</h2>
+         </div>
 
-
+         <div class="card-container">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Python with James</h5>
+                    <p class="card-text">June 25 @ 3:00 PM</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Python with James</h5>
+                    <p class="card-text">June 25 @ 3:00 PM</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Python with James</h5>
+                    <p class="card-text">June 25 @ 3:00 PM</p>
+                </div>
+            </div>
+         </div>
+         
      </main>
 </body>
 </html>
