--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -92,23 +92,16 @@
                         <h2>Quick Actions</h2>
                     </div>
                     <div class="card-container column">
-                        <div class="col-12 col-md-3 mb-3">
-                            <a href="/edit-profile" class="btn btn-outline-primary w-100">
-                                ✏️ Edit Profile
-                            </a>
-                        </div>
-
-                        <div class="col-12 col-md-3 mb-3">
-                            <a href="/browse" class="btn btn-outline-success w-100">
-                                🔍 Browse Users
-                            </a>
-                        </div>
-
-                        <div class="col-12 col-md-3 mb-3">
-                            <a href="/request-session" class="btn btn-outline-secondary w-100">
-                                📅 Request Session
-                            </a>
-                        </div>
+                        <a href="../Profile/profile.html">
+                            <button>Edit Profile</button>
+                        </a>
+                        <a href="../Browse/browse.html">   
+                            <button>Browse Users</button>
+                        </a>
+                        <a href="/request-session
+">
+                            <button>Request Session</button>
+                        </a>
                     </div>
                 </div>
             </div>
