added footer and placeholder activity feed for the dashboard

--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -98,16 +98,28 @@
                         <a href="../Browse/browse.html">   
                             <button>Browse Users</button>
                         </a>
-                        <a href="/request-session
-">
+                        <a href="/request-session">
                             <button>Request Session</button>
                         </a>
                     </div>
                 </div>
             </div>
+            <!-- Recent Activity Feed -->
+            <div class="container mt-4">
+            <h4 class="mb-3">Recent Activity</h4>
+
+            <div class="border rounded p-3 bg-light text-muted" style="min-height: 100px;">
+                <p class="mb-0">Your activity will appear here once you start using the app.</p>
+            </div>
+            </div> 
         </div>   
-
-
      </main>
+     <footer>
+        <div class="foot-content">
+            <div class="footer-section"><p>links</p></div>
+            <div class="footer-section"><p>about</p></div>
+            <div class="footer-section"><p>contact</p></div>           
+        </div>
+    </footer>
 </body>
 </html>
