--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- header -->
+     <header style="background-color: rgb(240, 245, 244);">
+        <div class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+            <div class="container">
+                <a class="navbar-brand fw-bold" href="#">Skillswap</a>
+                <div class="d-flex">
+                    <a class="new-link" style="padding-right:3rem;" href="../Dashboard/dashboard.html">Home</a>
+                    <a class="new-link" style="padding-right:3rem;" href="../Browse/browse.html">Browse</a>
+                    <a class="new-link" style="padding-right:3rem;" href="#">Profile</a>
+                    <a class="new-link" style="padding-right:3rem;" href="#">Logout</a>
+                </div>
+            </div>
+
+        </div>
+     </header>
 </body>
 </html>
